# footballiq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRONTEND_BLUEPRINT.md  LICENSE  Makefile  README.md  docker-compose.yml  handoff.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  web-ci.yml
docs/: README.md  deployment-free-tier.md  runbook.md  testing-strategy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-clean-architecture-with-domain-agnostic-kernel.md  0003-local-first-azure-ready-deployment.md  0004-docs-as-code.md  0005-metabase-replaces-power-bi.md  0006-additive-simulation-and-governance-module.md  template.md
docs/ai/: rag-design.md
docs/analytics/: graph-design.md
docs/api/: backend-design.md
docs/architecture/: c4-level1-context.md
docs/bi/: kpis.md  semantic-model-design.md
docs/bi/queries/: age_value_curve.sql  graph_nation_concentration.sql  graph_top_suppliers.sql  kpi_cards.sql  player_explanation_tornado.sql  team_points.sql  top_players.sql  value_by_position.sql  value_gap_by_position.sql  value_gap_shortlist.sql  value_vs_performance.sql  xg_vs_goals.sql
docs/data/: dataset-profile-batch1.md  dataset-profile-batch2.md  logical-data-model.md  physical-architecture.md
docs/infra/: azure-architecture.md
docs/ml/: ml-system-design.md  xai-design.md
docs/ml/queries/: scoring_validation.sql
docs/modules/: 00-foundation.md  01-domain-core.md  02-data-platform.md  03-api.md  04-bi.md  05-ml.md  06-graph.md  07-ai.md  08-portal.md  09-ship.md  10-simulation.md
docs/product/: prd.md  scope.md
docs/reviews/: 2026-07-02-architecture-review.md
docs/templates/: module-report.md
infra/bicep/: README.md  main.bicep  staging.bicepparam
infra/postgres/init/: 01-schemas-and-roles.sql  02-ai-schema-and-role.sql
portal/: README.md  __init__.py  api_client.py  app.py  session.py
portal/pages/: 1_Scout_Shortlist.py  2_Talent_Flow.py  3_Ask_the_Analyst.py
scripts/: demo_smoke.py  validate_scoring.py
src/footballiq/: __init__.py
src/footballiq/api/: __init__.py  auth.py  errors.py  main.py  schemas.py
src/footballiq/application/: __init__.py  model_performance.py  ports.py  queries.py  read_models.py  simulation.py
src/footballiq/domains/: __init__.py
src/footballiq/graph/: __init__.py  __main__.py  build.py
src/footballiq/infrastructure/: __init__.py  config.py
src/footballiq/kernel/: __init__.py  entity.py  errors.py  ports.py  result.py  value_object.py
src/footballiq/ml/: __init__.py  __main__.py  features.py  metrics.py  model_registry.py  registry.py  scoring.py  valuation.py
tests/: test_domain_entities.py  test_domain_match.py  test_kernel.py  test_smoke.py
tests/integration/: test_postgres_adapters.py
tests/unit/: test_api_analyst.py  test_api_graph.py  test_api_matches.py  test_api_models.py  test_api_players.py  test_api_simulations.py  test_api_system.py  test_api_teams.py  test_api_valuations.py  test_bronze_loader.py  test_config.py  test_domain_entities.py  test_gold_matches_adapter.py  test_graph_build.py  test_ml_features.py  test_ml_scoring.py  test_ml_valuation.py  test_portal_client.py  test_rag_chunking.py  test_rag_golden.py  test_rag_grounding.py  test_rag_indexing.py  test_rag_pipeline.py  test_rag_routing.py  test_simulation_math.py  test_smoke.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: latest_load.sql  schema_name.sql
transform/models/gold/: _gold_schema.yml  dim_date.sql  dim_player.sql  dim_referee.sql  dim_stage.sql  dim_team.sql  dim_venue.sql  fact_match.sql  fact_match_event.sql  fact_match_team_stats.sql  fact_player_match.sql  player_tournament_snapshot.sql
transform/models/silver/: _silver_schema.yml  _sources.yml  quarantine_match.sql  silver_lineup.sql  silver_match.sql  silver_match_base.sql  silver_match_event.sql  silver_player.sql  silver_player_tournament_stats.sql  silver_referee.sql  silver_stage.sql  silver_team.sql  silver_team_match_stats.sql  silver_venue.sql
transform/seeds/: known_data_issues.csv
transform/tests/: assert_goal_events_reconcile_scores.sql  assert_quarantine_empty.sql  assert_scores_match_detailed_file.sql  assert_snapshot_goals_reconcile.sql  assert_team_stats_grain.sql
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/scripts/: capture-snapshots.mjs
web/snapshots/: health.json  v1_graph_clubs_limit_20_offset_0.json  v1_graph_clubs_limit_5_offset_0.json  v1_graph_talent_flow_limit_100_offset_0.json  v1_matches_limit_100.json  v1_matches_status_Scheduled_limit_100_offset_0.json  v1_matches_status_Scheduled_limit_5_offset_0.json  v1_models_performance.json  v1_players_limit_1.json  v1_players_limit_100_offset_0.json  v1_players_limit_100_offset_100.json  v1_players_limit_100_offset_1000.json  v1_players_limit_100_offset_1100.json  v1_players_limit_100_offset_1200.json  v1_players_limit_100_offset_200.json  v1_players_limit_100_offset_300.json  v1_players_limit_100_offset_400.json  v1_players_limit_100_offset_500.json  v1_players_limit_100_offset_600.json  v1_players_limit_100_offset_700.json  v1_players_limit_100_offset_800.json  v1_players_limit_100_offset_900.json  v1_players_limit_50_offset_0.json  v1_players_limit_50_offset_100.json  v1_players_limit_50_offset_150.json  v1_players_limit_50_offset_200.json  v1_players_limit_50_offset_250.json  v1_players_limit_50_offset_300.json  v1_players_limit_50_offset_350.json  v1_players_limit_50_offset_400.json  v1_players_limit_50_offset_450.json  v1_players_limit_50_offset_50.json  v1_players_limit_50_offset_500.json  v1_players_limit_50_offset_550.json  v1_players_limit_50_offset_600.json  v1_teams_limit_1.json  v1_teams_limit_100.json  v1_valuations_limit_1.json  v1_valuations_sort_value_gap_order_desc_limit_50_offset_0.json  v1_valuations_sort_value_gap_order_desc_limit_5_offset_0.json
web/src/: middleware.ts
web/src/app/: page.tsx  (+4 more)
(+100 files in other folders)
