[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "footballiq"
version = "0.1.0"
description = "FootballIQ Enterprise — Enterprise AI Decision Intelligence Platform (football demonstration domain)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zoeb Ali Khan", email = "zoebalikhan00@gmail.com" }]
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "import-linter>=2.0",
    "dbt-postgres>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/footballiq"]

# ---------------------------------------------------------------- quality gates

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # import sorting
    "N",        # pep8 naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "ARG",      # unused arguments
    "PL",       # pylint
    "RUF",      # ruff-specific
]
ignore = [
    "N818",  # InvariantViolation keeps its DDD name; domain language > suffix convention
]

[tool.ruff.lint.per-file-ignores]
# PLR2004: literal expected values are the point of a test.
# PLC0415: function-scoped imports are deliberate in importability smoke tests.
"tests/*" = ["PLR2004", "PLC0415"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["footballiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=footballiq --cov-report=term-missing"

[tool.coverage.run]
source = ["src/footballiq"]

# ADR-0002 layer rules, mechanically enforced (imports against the arrows fail).
[tool.importlinter]
root_package = "footballiq"

[[tool.importlinter.contracts]]
name = "Clean architecture layers (ADR-0002)"
type = "layers"
layers = [
    "footballiq.api",
    "footballiq.infrastructure",
    "footballiq.application",
    "footballiq.domains",
    "footballiq.kernel",
]
