[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "footballiq"
version = "1.1.0"
description = "FootballIQ Enterprise — Enterprise AI Decision Intelligence Platform (football demonstration domain)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zoeb Ali Khan", email = "zoebalikhan00@gmail.com" }]
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
pipeline = [
    "dbt-postgres>=1.8",
]
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
]
graph = [
    "networkx>=3.0",
]
rag = [
    "sentence-transformers>=2.2",
    "pgvector>=0.2",
]
portal = [
    "streamlit>=1.30",
    "httpx>=0.27",
    "pandas>=2.0",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "import-linter>=2.0",
    "dbt-postgres>=1.8",
    "httpx>=0.27",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "networkx>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/footballiq"]

# ---------------------------------------------------------------- quality gates

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # import sorting
    "N",        # pep8 naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "ARG",      # unused arguments
    "PL",       # pylint
    "RUF",      # ruff-specific
]
ignore = [
    "N818",  # InvariantViolation keeps its DDD name; domain language > suffix convention
]

[tool.ruff.lint.per-file-ignores]
# PLR2004: literal expected values are the point of a test.
# PLC0415: function-scoped imports are deliberate in importability smoke tests.
"tests/*" = ["PLR2004", "PLC0415"]
# PLC0415: heavy ML deps (sklearn/xgboost/shap) import lazily so that
# `make features` and the pipeline image work without the ml extra.
"src/footballiq/ml/*" = ["PLC0415"]
# PLC0415: sentence-transformers loads lazily (heavy) so serving/tests never
# pull it — same rationale as ml.
"src/footballiq/infrastructure/ai/*" = ["PLC0415"]
# Streamlit multipage requires numeric-prefixed filenames (pages/1_Name.py);
# N999 (invalid module name) does not apply to script-run pages.
"portal/pages/*" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["footballiq", "portal", "api_client", "session"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["footballiq"]

[[tool.mypy.overrides]]
module = ["xgboost.*", "sklearn.*", "shap.*", "networkx.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]  # "." so the portal package (API client) is importable
addopts = "-q --cov=footballiq --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: requires a real Postgres (FIQ_TEST_DATABASE_URL); skipped otherwise",
]

[tool.coverage.run]
source = ["src/footballiq"]
# CLI entry-point wrappers excluded (testing-strategy.md: meaningful
# coverage, not vanity numbers — the wrapped logic is tested directly).
omit = ["*/__main__.py"]

# ADR-0002 layer rules, mechanically enforced (imports against the arrows fail).
[tool.importlinter]
root_package = "footballiq"

[[tool.importlinter.contracts]]
name = "Clean architecture layers (ADR-0002)"
type = "layers"
layers = [
    "footballiq.api",
    "footballiq.ml",
    "footballiq.graph",
    "footballiq.infrastructure",
    "footballiq.application",
    "footballiq.domains",
    "footballiq.kernel",
]
